src/app/shared/components/navbar/navbar.component.scss
.header {
    transition-property: background-color;
    transition-duration: .15s;
    transition-timing-function: ease-out;
}

.container {
    display: flex;
    justify-content: space-between;
    align-items: center;

    max-width: calc(90rem - 16px);
    padding-inline: calc(min(5%, 2rem) - 16px);
}

.logo {
    text-decoration: none;
    display: flex;
    align-items: center;
    font-size: var(--fs-large);
    font-weight: 800;
    gap: .3em;
    border-radius: 100px;
    padding-inline: .5em;

    img {
        max-height: var(--fs-large);
    }
}

.navbar__list {
    display: flex;
    list-style: none;
    margin: 0;
    padding: .5rem 0;
    gap: .5rem;
}

.rounded-button {
    --bg-color: hsl(var(--clr-white));
    --text-color: hsl(var(--clr-blue-dark));
    --p-x: 1.35em;
    --p-y: .45em;
}

.rounded-button:hover,
.circle-button:hover {
    transform: scale(1.025);
}

.header_on-scroll {
    background-color: hsl(var(--clr-white-98), .95);
    backdrop-filter: blur(5px);
    box-shadow: 0 3px 4px rgba(0, 0, 0, .2);

    .rounded-button:not(.active) {
        --bg-color: hsl(var(--clr-white-98));
        --text-color: hsl(var(--clr-blue));
        --p-x: calc(1.35em - 2px);
        --p-y: calc(.45em - 2px);
        border: 2px solid hsl(var(--clr-blue));
    }
}

.active {
    --bg-color: hsl(var(--clr-blue));
    --text-color: hsl(var(--clr-white));
}

